k8s/ride-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ride-connect-deployment
  namespace: ride-connect

spec:
  replicas: 3

  selector:
    matchLabels:
      app: ride-connect

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: ride-connect

    spec:
      containers:
        - name: ride-connect
          image: maesh0004/springboot-app:IMAGE_TAG
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

      imagePullSecrets:
        - name: dockerhub-secret
